--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,8 @@
+# PHP File Upload Configuration
+php_value upload_max_filesize 20M
+php_value post_max_size 25M
+php_value memory_limit 256M
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
